# himalayas

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci-e2e.yml  ci.yml
src/himalayas/: __init__.py
src/himalayas/core/: __init__.py  analysis.py  annotations.py  clustering.py  enrichment.py  layout.py  matrix.py  results.py
src/himalayas/plot/: __init__.py  condensed_dendrogram.py  contracted_dendrogram.py  plotter.py  style.py  track_layout.py
src/himalayas/plot/renderers/: __init__.py  _cluster_label_types.py  _label_format.py  _text_style.py  axes.py  base.py  cluster_bar.py  cluster_labels.py  colorbar.py  dendrogram.py  gene_bar.py  label_bar.py  label_legend.py  matrix.py  sigbar_legend.py
src/himalayas/text/: __init__.py  term_summarization.py
src/himalayas/util/: __init__.py  typing.py  warnings.py
tests/: conftest.py  test_analysis_workflow.py  test_annotations.py  test_api_smoke.py  test_clustering.py  test_contracted_dendrogram.py  test_dendrogram_condensed.py  test_enrichment.py  test_layout_utils.py  test_matrix.py  test_matrix_edge_cases.py  test_plot_contracts.py  test_plot_smoke.py  test_results.py  test_text_summarization.py
