[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "himalayas"
dynamic = ["version"]
description = "Hierarchical Matrix Layout and Annotation Software"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

authors = [
    { name = "Ira Horecka" }
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "typing_extensions; python_version < '3.10'",
]

[project.optional-dependencies]
text = ["nltk"]

[project.urls]
Homepage = "https://github.com/himalayas-base/himalayas"
Repository = "https://github.com/himalayas-base/himalayas"

[tool.setuptools.dynamic]
version = { attr = "himalayas.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "api: public API tests",
    "unit: unit tests",
    "slow: slow or integration tests",
]
